tests/res/exceptions/throw_in_try_finally.say
try {
    throw "error"; // error: Uncaught exception: "error"
} finally {
    print("finally"); // expect: finally
}